Limit text length of pref default value, prevents horizontal scrollbar

--- a/preferences/templates/default/app.css
+++ b/preferences/templates/default/app.css
@@ -56,6 +56,9 @@ tr.prefRow:hover .prefHelp {
 .prefDefault {
 	float: right;
 	width:48%;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	max-width: 300px;
 }
 .prefValue textarea, textarea.prefValue {
 	width: 99%;
